[package]
name = "urban-telegram"
version = "0.1.0"
authors = ["Lucas <genevasterm@protonmail.ch>"]
edition = "2018"

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]
native = [
    "bevy/bevy_wgpu"
]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "7a511394ac6c4f90b5398ab6333f1bd4fd665613", default-features=false }

[build-dependencies]
embed-resource = "1.6.1"